--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "redux": "^4.0.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-scripts": "1.1.5",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.5"
+    "redux-devtools-extension": "^2.13.2",
+    "prop-types": "^15.6.0",
+    "isomorphic-fetch": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
